metamorphosed/gui/index.css
/* ... */
.day {
  background-color: #085ebd;
  color: white
}

.dayperiod {
  background-color: #085ebd;
  color: white
}

.op1 {
  background-color: #595959;
  color: white
}

.op2 {
  background-color: #595959;
  color: white
}

.op3 {
  background-color: #595959;
  color: white
}

.op4 {
  background-color: #595959;
  color: white
}

.value {
  background-color: #595959;
  color: white
}

.ARG0text { color: #ff7900; }
.actortext { color: #ff7900; }
.ARG1text { color: #9164cd; }
.affecteetext { color: #9164cd; }
.ARG3text { color: #ffb4e6; }
.themetext { color: #ffb4e6; }
.ARG4text { color: #50be87; }
.ARG2text { color: #4bb4e6; }
.ARG5text { color: #ffdc00; }

.mannertext { color: #8f8f8f; }
.aspecttext { color: #8f8f8f; }
.beneficiarytext  {  color: #d9c2f0; }
.ordtext {  color: #d6d6d6; }
.snt1text {  color: #b8ebd6; }
.snt2text {  color: #b8ebd6; }
.snt3text {  color: #b8ebd6; }
.snt4text {  color: #b8ebd6; }
.modtext {  color: #ffb400; }
.nametext {  color: #492191; }
.locationtext {  color: #ff8ad4; }
.placetext {  color: #ff8ad4; }
.mannertext {  color: #0a6e31; }
.timetext {  color: #085ebd; }
.monthtext {  color: #085ebd; }
.daytext {  color: #085ebd; }
.dayperiodtext {  color: #085ebd; }
.op1text {  color: #595959; }
.op2text {  color: #595959; }
.op3text {  color: #595959; }
.op4text {  color: #595959; }
.valuetext {  color: #595959; }
.purposetext {  color: #085ebd; }
.directiontext {  color: #b5e8f7; }
.quanttext {  color: #d9c2f0;}
.unittext {  color: #fff6b6;}
.accompaniertext {  color: #085ebd;}
*/

.literal {
 font-style: italic;
 }
.conceptslash {
  font-weight: bold;
}

.modal {
  display: none;

  /* height: 400px; */
  /* margin: 0 auto; */
  position: absolute;
  z-index: 40001;
  background: #fff;
  border-radius: 10px;
  box-shadow: 0px 0px 10px #000;
  /* margin-top: 30px; */
  /* margin-left: 10%; */
  padding: 0px;
  /*animation-name: fadeIn_Modal;
  animation-duration: 0.8s;*/
}

#conceptsetmodal {
  max-width: 950px;
  width: 560px;
}

#edgesetmodal {
  max-width: 400px;
  width: 320px;
}

#literalsetmodal {
  max-width: 400px;
  width: 330px;
}

#sentmodal, #commentmodal {
  top: 20%;
  max-width: 90%;
  width: 90%;
}

#addgraphmodal {
  top: 20%;
  max-width: 50%;
  width: 50%;
}

#umr_alignment_modal {
  top: 20%;
  max-width: 20%;
  width: 20%;
}


#sentencelist {
  width: 100%;
 }

#svgexport { 
  top: 40%;
  left: 33%;
 }


.smatch { 
  color: #0a6e31;
 }

.cancelmodal {
  float: right;
  font-family: 'Sans';
  font-size: 120%;
  background: rgb(255, 255, 255);
  color: rgb(100, 100, 100);
  border: 1px solid #d6d6d6;
  border-radius: 50%;
  top: 0;
  right: 0;
  margin-top: -33px;
  margin-right: -28px;
  /*transform: translate(50%, -50%);*/
}

.subtitle {
  font-style: italic;
  color: #8f8f8f;
  font-size: 160%;
  padding-left: 20px;

}

.ui-autocomplete.ui-widget {
    /*font-family: sans; */
    font-family:  Urbanist, "Be Vietnam Pro";
    /*color: rgb(75,180,230);*/
    color: rgb(8,94,189);
    font-size: 90%;
    margin-left: 1em;
}

.ui-autocomplete {
  max-height: 200px;
  overflow-y: auto;
  /* prevent horizontal scrollbar */
  overflow-x: hidden;
}
.ui-tabs .ui-tabs-nav .ui-tabs-anchor {
  padding: 0.3em .8em;
}

.ui-widget-header {
  border: 0px;
  border-bottom: 1px solid #ddd;
  background: white;
  color: #333;
  font-weight: bold;
}

.ui-widget-header .ui-state-active {
  background: #be8557;
  border: 1px solid #c78975;
}

.ooopui-widget.ui-widget-content {
  border: 0px;
}

.ui-widget {
  font-family: Urbanist, "Be Vietnam Pro", Syne, Poppins, Lato, Ubuntu, DejaVu Sans, Arial, Helvetica, Sans;
  font-size: 80%;
}
.ui-state-default a, .ui-state-default a:link {
  color: black;
}


/*
.tablehoriz {
  display: inline-block;
  *display: inline;
  vertical-align: top;
}*/

.boldline {
  background-color: #ffe5cc;
  font-weight: bold;
}

.cmpval {
  text-align: right;
}

.smatchdifferent {
  color: red;
}
.smatchok {
  color: rgb(10, 110, 49);
}

.umreldoc {
  white-space: pre-wrap; 
  width: auto;
  display: inline-block;
  vertical-align: top;
}

.task {
  width: 17em;
}

.onlyumr {
  display: none
}

